<resources>
    <string-array name="languages">
        <item>Italiano</item>
        <item>English</item>
        <item>Español</item>
        <item>Português</item>
        <item>Ryukyuan</item>
    </string-array>
    <string name="app_name">ps3netsrv</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="port">Port:</string>
    <string name="folder">Folder:</string>
    <integer name="defaultPort">38008</integer>
    <string name="negativePortValue">Port must be greater than 1024.</string>
    <string name="invalidPortValue">Invalid port</string>
    <string name="invalidFolder">Invalid folder</string>
    <string name="saveSuccess">The settings have been saved</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">Settings</string>
    <string name="start_server">Start server</string>
    <string name="stop_server">Stop server</string>
    <string name="server_stopped">Server is stopped</string>
    <string name="server_running">Server is running at %s\nport %d\nfolders: %s</string>
    <string name="read_external_permission_error">You need to grant permission to read storage first</string>
    <string name="listType">List type:</string>
    <string name="rbNone">None</string>
    <string name="rbAllowed">Allowed</string>
    <string name="rbBlocked">Blocked</string>
    <string name="ipAddress">IP address:</string>
    <string name="add">Add</string>
    <string name="ipRemoved">Removed IP: </string>
    <string name="folderRemoved">Removed folder: </string>
    <string name="undo">Undo</string>
    <string name="select">Add folder</string>
    <string name="empty_response_error">Tried to send an empty response to %s (method %s)</string>
    <string name="readOnly">Read only</string>
    <string name="maxConnectedClients">Max connections (0 means unlimited):</string>
    <string name="negativeMaxConnectedClients">Max connections can\'t be negative.</string>
    <string name="invalidMaxConnectedClients">Invalid max connections</string>
    <string name="readOnlyDescription">Check this to prevent clients from creating or deleting files on the server</string>
    <string name="section_general">General</string>
    <string name="section_content">Content</string>
    <string name="section_security">Security</string>
    <string name="select_language">App language:</string>
    <string name="title_activity_about">About</string>
    <string name="about_developer_label">Developer:</string>
    <string name="about_developer_value" translatable="false">Jhonathan Corrêa</string>
    <string name="about_credits_label">Thanks to:</string>
    <string name="about_credits_value" translatable="false">Aldostools</string>
    <string name="about_version_label">Version (Commit):</string>
    <string name="error_receiving_filename">Error: Failed to receive filename</string>
    <string name="error_byte_array_conversion">Error converting byte array</string>
    <string name="error_empty_byte_array">Cannot send empty byte array response</string>
    <string name="error_create_file_readonly">Failed to create file: Server is read-only</string>
    <string name="error_create_file_generic">Error creating file: %1$s</string>
    <string name="error_delete_file_readonly">Failed to delete file: Server is read-only</string>
    <string name="error_make_dir_readonly">Failed to create directory: Server is read-only</string>
    <string name="error_open_file_not_exists">Error: File does not exist</string>
    <string name="error_cd_sector_size">Error: Unable to determine CD sector size</string>
    <string name="error_too_many_sectors">Too many sectors read</string>
    <string name="error_file_null">File cannot be null</string>
    <string name="error_no_file_open">No file is currently open</string>
    <string name="error_read_file_eof">Error reading file: EOF</string>
    <string name="error_read_file_generic">Error reading file</string>
    <string name="error_write_file_readonly">Failed to write file: Server is read-only</string>
    <string name="error_write_file_size">Error: Data size (%1$d) exceeds buffer size (%2$d)</string>
    <string name="error_write_file_null">Error writing file: Content is null</string>
    <string name="version_format">Version: %s</string>
    <string name="action_ok" translatable="false">OK</string>
    <string name="connection_disabled">The ethernet/wifi connection is disabled</string>
    <string name="error_occurred">An error occurred: %s</string>
    <string name="error_redump_key_invalid">Redump key is invalid</string>
    <string name="error_redump_key_hex_short">Redump key hex string too short: %1$d</string>
    <string name="error_redump_key_size_invalid">Redump key has invalid size: %1$d</string>
    <string name="error_open_output_stream">Failed to open output stream</string>
    <string name="error_file_not_writable">File is not writable or does not exist</string>
    <string name="notification_channel_name">PS3NetSrv Background Service</string>
    <string name="notification_title">PS3NetSrv is running in background</string>
    <string name="language_changed_dialog_message">Language changed. Application needs to restart to apply changes. The server will be restarted.</string>
    <string name="server_restart_prompt">Server is running. Restart to apply changes?</string>
    <string name="error_blocked_connection">Connection refused: %s</string>
    <string name="error_connection_limit_reached">Connection limit reached</string>
    <string name="error_invalid_opcode">Invalid opCode: %d</string>
    <string name="error_opcode_not_implemented">OpCode not implemented: %s</string>
    <string name="settings_log_errors">Log Errors</string>
    <string name="settings_log_commands">Log Commands</string>
    <string name="error_invalid_path">Error: Invalid or malicious path requested</string>
    <string name="str_hifen" translatable="false">-</string>
</resources>